--- a/supplier-ws/pom.xml
+++ b/supplier-ws/pom.xml
@@ -18,10 +18,14 @@
         <maven.compiler.target>1.8</maven.compiler.target>
 
         <mainclass>org.komparator.supplier.ws.SupplierApp</mainclass>
+	
+		<ws.i>1</ws.i>
 
-        <ws.host>localhost</ws.host>
-        <ws.port>8081</ws.port>
-        <ws.url>http://${ws.host}:${ws.port}/supplier-ws/endpoint</ws.url>
+		<ws.host>localhost</ws.host>
+		<ws.port>808${ws.i}</ws.port>
+		<ws.url>http://${ws.host}:${ws.port}/supplier-ws/endpoint</ws.url>		
+		<ws.name>T63_Supplier${ws.i}</ws.name>
+		<uddi.url>http://localhost:9090</uddi.url>
     </properties>
 
     <dependencies>
@@ -31,6 +35,12 @@
             <artifactId>jaxws-rt</artifactId>
             <version>2.2.10</version>
         </dependency>
+		<!-- UDDI Naming -->
+		<dependency>
+			<groupId>pt.ulisboa.tecnico.sdis</groupId>
+			<artifactId>uddi-naming</artifactId>
+			<version>1.2</version>
+		</dependency>
     </dependencies>
 
     <build>
@@ -74,6 +84,8 @@
                     <killAfter>-1</killAfter>
                     <mainClass>${mainclass}</mainClass>
                     <arguments>
+                        <argument>${uddi.url}</argument>
+                        <argument>${ws.name}</argument>
                         <argument>${ws.url}</argument>
                     </arguments>
                 </configuration>
