--- a/mediator-ws-cli/pom.xml
+++ b/mediator-ws-cli/pom.xml
@@ -45,6 +45,13 @@
             <artifactId>junit</artifactId>
             <version>4.12</version>
             <scope>test</scope>
+        </dependency>        
+        <!-- SupplierCli -->
+        <dependency>
+        	<groupId>org.komparator.T63</groupId>
+        	<artifactId>supplier-ws-cli</artifactId>
+        	<version>1.0-SNAPSHOT</version>
+        	<scope>test</scope>
         </dependency>
     </dependencies>
 
