--- a/cc-ws-cli/pom.xml
+++ b/cc-ws-cli/pom.xml
@@ -1,13 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <!-- http://maven.apache.org/pom.html#Quick_Overview -->
-
-	<!-- Please replace 'CXX' below with 
-        your C (campus) with A (Alameda) / T (Tagus); and 
-        your group number with two digits.
-        Then delete this comment. -->
-    <groupId>org.komparator.CXX</groupId>
+    <groupId>org.komparator.T63</groupId>
     <artifactId>cc-ws-cli</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
