--- a/ca-ws-cli/pom.xml
+++ b/ca-ws-cli/pom.xml
@@ -2,9 +2,8 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <!-- http://maven.apache.org/pom.html#Quick_Overview -->
-
     <groupId>org.komparator.T63</groupId>
-    <artifactId>mediator-ws</artifactId>
+    <artifactId>ca-ws-cli</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
@@ -17,16 +16,18 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
 
-        <mainclass>org.komparator.mediator.ws.MediatorApp</mainclass>
+        <!-- WSDL is required for client code generation -->
+        <ws.url>http://sec.sd.rnl.tecnico.ulisboa.pt:8081/ca</ws.url>
+        <wsdl.url>${ws.url}?WSDL</wsdl.url>
+    	    
+		<mainclass>pt.ulisboa.tecnico.sdis.ws.cli.CAClientApp</mainclass>
 
+        <ws.name>CA</ws.name>
         <uddi.url>http://localhost:9090</uddi.url>
-<!--         <uddi.url>http://t63:gm8AvvUD@uddi.sd.rnl.tecnico.ulisboa.pt:9090/</uddi.url> -->
-        <ws.name>T63_Mediator</ws.name>
-        <ws.url>http://localhost:8080/mediator-ws/endpoint</ws.url>
     </properties>
 
     <dependencies>
-    	<!-- JAX-WS -->
+        <!-- JAX-WS -->
         <dependency>
             <groupId>com.sun.xml.ws</groupId>
             <artifactId>jaxws-rt</artifactId>
@@ -38,21 +39,28 @@
             <artifactId>uddi-naming</artifactId>
             <version>1.2</version>
         </dependency>
-        <!-- Supplier Cli -->
-		<dependency>
-			<groupId>org.komparator.T63</groupId>
-			<artifactId>supplier-ws-cli</artifactId>
-			<version>1.0-SNAPSHOT</version>
-		</dependency>
-        <!-- Credit Card -->
-		<dependency>
-			<groupId>org.komparator.T63</groupId>
-			<artifactId>cc-ws-cli</artifactId>
-			<version>1.0-SNAPSHOT</version>
-		</dependency>
+        <!-- JUnit -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
+        <testResources>
+            <testResource>
+                <directory>src/test/resources</directory>
+                <filtering>true</filtering>
+            </testResource>
+        </testResources>
         <plugins>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
@@ -67,7 +75,9 @@
                 </executions>
                 <configuration>
                     <!-- https://jax-ws-commons.java.net/jaxws-maven-plugin/wsimport-mojo.html -->
-                    <wsdlDirectory>${basedir}/src/main/resources</wsdlDirectory>
+                    <wsdlUrls>
+                        <wsdlUrl>${wsdl.url}</wsdlUrl>
+                    </wsdlUrls>
                 </configuration>
                 <dependencies>
                     <dependency>
@@ -78,9 +88,21 @@
                 </dependencies>
             </plugin>
             <plugin>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>2.19.1</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>integration-test</goal>
+                            <goal>verify</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
-                <version>1.5.0</version>
+                <version>1.4.0</version>
                 <executions>
                     <execution>
                         <goals>
@@ -93,8 +115,6 @@
                     <killAfter>-1</killAfter>
                     <mainClass>${mainclass}</mainClass>
                     <arguments>
-                        <argument>${uddi.url}</argument>
-                        <argument>${ws.name}</argument>
                         <argument>${ws.url}</argument>
                     </arguments>
                 </configuration>
