--- a/supplier-ws-cli/pom.xml
+++ b/supplier-ws-cli/pom.xml
@@ -25,7 +25,8 @@
         <ws.url>http://localhost:8081/supplier-ws/endpoint</ws.url>
         <ws.i>1</ws.i>
         <ws.name>T63_Supplier${ws.i}</ws.name>
-		<uddi.url>http://localhost:9090</uddi.url>
+        <uddi.url>http://localhost:9090</uddi.url>
+<!--         <uddi.url>http://t63:gm8AvvUD@uddi.sd.rnl.tecnico.ulisboa.pt:9090/</uddi.url> -->
     </properties>
 
     <dependencies>
