--- a/supplier-ws/pom.xml
+++ b/supplier-ws/pom.xml
@@ -26,6 +26,7 @@
 		<ws.url>http://${ws.host}:${ws.port}/supplier-ws/endpoint</ws.url>		
 		<ws.name>T63_Supplier${ws.i}</ws.name>
 		<uddi.url>http://localhost:9090</uddi.url>
+<!--         <uddi.url>http://t63:gm8AvvUD@uddi.sd.rnl.tecnico.ulisboa.pt:9090/</uddi.url> -->
     </properties>
 
     <dependencies>
