Basic handler code and supplier base handlers

--- a/supplier-ws-cli/pom.xml
+++ b/supplier-ws-cli/pom.xml
@@ -49,6 +49,12 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
+		<!-- WS-HANDLER -->
+        <dependency>
+            <groupId>example</groupId>
+            <artifactId>ws-handlers</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
