--- a/supplier-ws/pom.xml
+++ b/supplier-ws/pom.xml
@@ -42,6 +42,12 @@
 			<artifactId>uddi-naming</artifactId>
 			<version>1.2</version>
 		</dependency>
+		<!--  WS-Handlers -->
+		<dependency>
+			<groupId>example</groupId>
+			<artifactId>ws-handlers</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
     </dependencies>
 
     <build>
