--- a/mediator-ws/pom.xml
+++ b/mediator-ws/pom.xml
@@ -50,6 +50,18 @@
 			<artifactId>cc-ws-cli</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
+        <!-- Certificate Authority -->
+		<dependency>
+			<groupId>org.komparator.T63</groupId>
+			<artifactId>ca-ws-cli</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<!-- Security -->
+		<dependency>
+			<groupId>org.komparator.T63</groupId>
+			<artifactId>security</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
     </dependencies>
 
     <build>
