--- a/supplier-ws-cli/pom.xml
+++ b/supplier-ws-cli/pom.xml
@@ -49,12 +49,18 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
-		<!-- WS-HANDLER -->
-        <dependency>
-            <groupId>example</groupId>
-            <artifactId>ws-handlers</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
+        <!-- Certificate Authority -->
+		<dependency>
+			<groupId>org.komparator.T63</groupId>
+			<artifactId>ca-ws-cli</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<!-- Security -->
+		<dependency>
+			<groupId>org.komparator.T63</groupId>
+			<artifactId>security</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
     </dependencies>
 
     <build>
