--- a/mediator-ws/pom.xml
+++ b/mediator-ws/pom.xml
@@ -50,6 +50,12 @@
 			<artifactId>supplier-ws-cli</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
+        <!-- Mediator Cli -->
+		<dependency>
+			<groupId>org.komparator.T63</groupId>
+			<artifactId>mediator-ws-cli</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
         <!-- Credit Card -->
 		<dependency>
 			<groupId>org.komparator.T63</groupId>
@@ -114,6 +120,7 @@
                         <argument>${uddi.url}</argument>
                         <argument>${ws.name}</argument>
                         <argument>${ws.url}</argument>
+                        <argument>${ws.i}</argument>
                     </arguments>
                 </configuration>
             </plugin>
