--- a/mediator-ws-cli/pom.xml
+++ b/mediator-ws-cli/pom.xml
@@ -107,6 +107,7 @@
                     <wsdlFiles>
                         <wsdlFile>${wsdl.filename}</wsdlFile>
                     </wsdlFiles>
+<!--                     <packageName>org.komparator.mediator.ws.client</packageName> -->
                 </configuration>
                 <dependencies>
                     <dependency>
